--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,19 @@ body{
     margin: 0; 
 }
 
+
 others{
    --modal-indx: 1000;  
+}
+.visually-hidden{
+   position: absolute;
+   width: 1px;
+   height: 1px;
+   margin: -1px;
+   padding: 0;
+   overflow: hidden;
+   border: 0;
+   clip: rect(0 0 0 0);
 }
  
 
