--- a/css/styles.css
+++ b/css/styles.css
@@ -796,6 +796,7 @@ margin-left: 24px;
 display: flex;
 flex-direction: column;
 padding: 16px 24px;
+margin-top: 14px;
 }
 .modal-label{
 display: block;
