--- a/css/styles.css
+++ b/css/styles.css
@@ -789,6 +789,7 @@ transition: color var(--overlay-time);
    font-weight: 500;
    width: 360px;
 height: 24px;
+margin: 0;
 margin-top: 72px;
 margin-left: 24px;
 }
@@ -796,7 +797,6 @@ margin-left: 24px;
 display: flex;
 flex-direction: column;
 padding: 16px 24px;
-margin-top: 14px;
 }
 .modal-label{
 display: block;
