--- a/css/styles.css
+++ b/css/styles.css
@@ -809,10 +809,13 @@ padding-left: 38px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
 }
-.modal-input :focus{
+.modal-input:focus{
    outline: none;
    border: 1px solid #4D5AE5;
 border-radius: 4px;
+}
+.modal-input + .modal-img:focus{
+   fill: color #4D5AE5;
 }
 .modal-label-name{
    font-weight: 500;
