--- a/css/styles.css
+++ b/css/styles.css
@@ -522,14 +522,16 @@ transition: color var(--overlay-time);
  .footer-link :last-child{
    margin: 0;
  }
+
+/*Subsribe*/
+
+
 .subscribe{
    margin: 0;
    padding: 0;
    margin-left: 80px;
 }
 .subscribe-text{
-   width: 75px;
-   height: 24px;
    margin: 0;
    margin-bottom: 16px;
    font-weight: 500;
@@ -556,8 +558,16 @@ padding-left: 16px;
 font-size: 12px;
 line-height:24px;
 align-items: center;
-    color: rgba(255, 255, 255, 0.6);
-    margin-left: 16px;
+color: rgba(255, 255, 255, 0.6);
+margin-left: 16px;
+}
+.footer-input:focus{
+   border: 1px solid #4D5AE5;
+border-radius: 4px;
+}
+.footer-input:hover{
+   border: 1px solid #4D5AE5;
+border-radius: 4px;
 }
 
 .footer-btn{
@@ -742,9 +752,10 @@ padding: 40px 32px 164px;
  .modal{
    position: absolute;
     width: 408px;
-    height: 584px;
     left: 50%;
     top: 88px;
+    padding: 24px;
+    margin: 0;
     transform: translateX(-50%);
     background: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -788,15 +799,14 @@ transition: color var(--overlay-time);
    text-align: center;
    font-weight: 500;
    width: 360px;
+   padding-top: 24px;
+   padding-bottom: 14px;
 height: 24px;
-margin: 0;
-margin-top: 72px;
-margin-left: 24px;
+color: #2E2F42;
 }
 .modal-form{
 display: flex;
 flex-direction: column;
-padding: 16px 24px;
 }
 .modal-label{
 display: block;
@@ -842,25 +852,28 @@ left: 16px;
 transition: color var(--overlay-time),
 border var(--overlay-time);
 }
-.user-comment{
+.modal-user-comment{
    resize: none;
    width: 100%;
 height: 120px;
 border: 1px solid rgba(33, 33, 33, 0.2);
 border-radius: 4px;
-color: rgba(117, 117, 117, 0.5);
-}
-.user-comment::placeholder{
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-padding-top: 8px;
+padding: 0;
 padding-left: 16px;
-color: rgba(117, 117, 117, 0.5);
+padding-top: 8px;
+transition: border var(--overlay-time);
 }
-.checkbox-input{
+.modal-user-comment::placeholder{
+   font-weight: 500;
+   font-size: 12px;
+   line-height: 16px;
+   color: rgba(117, 117, 117, 0.5);
+   }
+.modal-user-comment:focus{
+border: 1px solid #4D5AE5;
+border-radius: 4px;  
+}
 
-}
 .checkbox-text{ 
    cursor: pointer;
     display: block;
